视频在线播放相关

--- a/app/src/main/res/layout/activity_srceen_shot.xml
+++ b/app/src/main/res/layout/activity_srceen_shot.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <Button
@@ -15,4 +16,10 @@
         android:layout_height="wrap_content"
         android:onClick="onClickShot"
         android:text="Using Activity" />
+
+    <SurfaceView
+        android:id="@+id/surfaceView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
 </LinearLayout>
