--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,12 +12,19 @@
 
         <LinearLayout
             android:layout_width="match_parent"
+            android:orientation="vertical"
             android:layout_height="wrap_content">
             <Button
                 android:id="@+id/screen_shot_btn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="截屏相关"/>
+
+            <Button
+                android:id="@+id/video_play_online_btn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="视频在线播放"/>
 
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
