加入了viewpager画廊效果

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,12 @@
                 android:layout_height="wrap_content"
                 android:text="视频在线播放"/>
 
+            <Button
+                android:id="@+id/viewpager_btn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="viewpager卡片"/>
+
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
