--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="red">#FFFF0000</color>
+    <color name="green">#FF00FFFF</color>
+    <color name="blue">#FF0000FF</color>
 
     <color name="uvv_gray">#969696</color>
     <color name="uvv_black">#ff000000</color>
