--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,84 @@
     <color name="uvv_black">#ff000000</color>
     <color name="uvv_light_gray">#ffF0F0F0</color>
     <color name="uvv_titlebar_bg">#7f000000</color>
+
+    <color name="button_bg_black">#212121</color>
+    <color name="button_bg_gary">#7a7a7a</color>
+    <color name="white_99">#99FFFFFF</color>
+
+    <color name="transparent">#00000000</color>
+    <color name="black_34">#ff343D32</color>
+    <color name="gray_91">#919690</color>
+    <color name="gray_ca">#CACACA</color>
+    <color name="red_f0">#F05C30</color>
+
+    <color name="gray_e5">#e5e5e5</color>
+    <color name="gray_f8">#f8f8f8</color>
+    <!--    <color name="orange">#F97C64</color>-->
+
+    <!--    <color name="color_bg">#F3F4F9</color>-->
+    <color name="color_bg">#F2F2F2</color>
+    <!--  主题红色  -->
+    <color name="color_red">#F32F2F</color>
+    <!--  主题橙色  -->
+    <color name="color_orange">#FF822E</color>
+    <!--  主题蓝色  -->
+    <color name="color_blue">#0073E5</color>
+
+    <color name="color_grey_light">#EEEEED</color>
+    <color name="color_111111">#111111</color>
+    <color name="color_F3F3F3">#F3F3F3</color>
+    <color name="color_888888">#888888</color>
+    <color name="color_FF680A">#FF680A</color>
+    <color name="color_FF4444">#FF4444</color>
+    <color name="color_333333">#333333</color>
+    <color name="color_999999">#999999</color>
+    <color name="color_EFEFEF">#EFEFEF</color>
+    <color name="color_666666">#666666</color>
+    <color name="color_FE8900">#FE8900</color>
+    <color name="color_80FFFFFF">#80ffffff</color>
+    <color name="color_FFAAAAAA">#FFAAAAAA</color>
+    <color name="color_FF333333">#FF333333</color>
+    <color name="color_FFF5F5F5">#FFF5F5F5</color>
+    <color name="color_FFFF680A">#FFFF680A</color>
+    <color name="color_FFE8E8E8">#FFE8E8E8</color>
+    <color name="color_FF666666">#FF666666</color>
+    <color name="color_FFFFBF97">#FFFFBF97</color>
+    <color name="color_0AF32F2F">#0AF32F2F</color>
+    <color name="color_FFFF4444">#FFFF4444</color>
+    <color name="color_FFBABABA">#FFBABABA</color>
+    <color name="color_0AFE8900">#0AFE8900</color>
+    <color name="color_0AFF680A">#0AFF680A</color>
+    <color name="color_FFF3F3F3">#FFF3F3F3</color>
+    <color name="color_FFFFFBF8">#FFFFFBF8</color>
+    <color name="color_FFF1F1F1">#FFF1F1F1</color>
+    <color name="color_FFF8F8F8">#FFF8F8F8</color>
+    <color name="color_FFD3D3D3">#FFD3D3D3</color>
+    <color name="color_FF0F0F0F">#FF0F0F0F</color>
+    <color name="color_CCFFF6F0">#CCFFF6F0</color>
+    <color name="color_FFFFDEAE">#FFFFDEAE</color>
+    <color name="color_FFF5E2B8">#FFF5E2B8</color>
+    <color name="color_FFFE8900">#FFFE8900</color>
+    <color name="color_FFEEEEEE">#FFEEEEEE</color>
+    <color name="color_FF00A542">#FF00A542</color>
+    <color name="color_FFFF4141">#FFFF4141</color>
+    <color name="color_FF389FFE">#FF389FFE</color>
+    <color name="color_FF323233">#FF323233</color>
+    <color name="color_FFF2F2F2">#FFF2F2F2</color>
+    <color name="FFF1E6">#FFF1E6</color>
+    <color name="color_FFF0F0F0">#FFF0F0F0</color>
+    <color name="color_80000000">#80000000</color>
+    <color name="color_FFDB8900">#FFDB8900</color>
+    <color name="color_FFFFF0D7">#FFFFF0D7</color>
+    <color name="color_FFFFE1E1">#FFFFE1E1</color>
+    <color name="color_FFD9EDFF">#FFD9EDFF</color>
+    <color name="color_FF2D9AFF">#FF2D9AFF</color>
+    <color name="color_FFFFF1E6">#FFFFF1E6</color>
+    <color name="color_FFFFD0B2">#FFFFD0B2</color>
+    <color name="color_99000000">#99000000</color>
+    <color name="color_60000000">#60000000</color>
+    <color name="color_FFCCCCCC">#FFCCCCCC</color>
+    <color name="color_FFF4F4F4">#FFF4F4F4</color>
+    <color name="color_66000000">#66000000</color>
+
 </resources>
