--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,6 +50,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Glide加载SVG" />
+            <Button
+                android:id="@+id/upan_btn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="U盘demo" />
+
+            <Button
+                android:id="@+id/city_list_btn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="城市选择器" />
 
             <Button
                 android:id="@+id/charts_btn"
