--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -95,4 +95,9 @@
     <color name="color_FFF4F4F4">#FFF4F4F4</color>
     <color name="color_66000000">#66000000</color>
 
+    <color name="gray">#808080</color>
+    <color name="gray1">#cccccc</color>
+    <color name="gray2">#efefef</color>
+    <color name="gray3">#D9D9D9</color>
+
 </resources>
